@@ -7,6 +7,7 @@ Version 7.8.0
   capture far more events with improved console formatting.
 - The 'sentry' user can no longer be removed.
 - The Cassandra nodestore backend was broken, and this has been resolved.
+- The ``has_perm`` plugin hook is no longer used.
 
 
 Version 7.7.0
